--- a/Orbital/frontend/src/Login/forgetPassword.css
+++ b/Orbital/frontend/src/Login/forgetPassword.css
@@ -24,7 +24,7 @@ h2 {
     text-align: center;
 }
 
-.signup-group {
+.link {
     margin-bottom: 1.5rem;
 }
 
@@ -112,12 +112,8 @@ button:hover {
     }
 }
 
-.password-requirements {
-    font-size: 10px;
-    color: rgb(57, 57, 57);
-}
-
-.signup-to-login {
+.forgetpassword-to-login {
     text-align: right;
     font-size: 12px;
 }
+
