--- a/Orbital/frontend/src/Login/resetPassword.css
+++ b/Orbital/frontend/src/Login/resetPassword.css
@@ -24,7 +24,7 @@ h2 {
     text-align: center;
 }
 
-.signup-group {
+.link {
     margin-bottom: 1.5rem;
 }
 
@@ -117,7 +117,8 @@ button:hover {
     color: rgb(57, 57, 57);
 }
 
-.signup-to-login {
+.resetpassword-to-login {
     text-align: right;
     font-size: 12px;
 }
+
