--- a/Orbital/frontend/src/Login/forgetPassword.css
+++ b/Orbital/frontend/src/Login/forgetPassword.css
@@ -75,7 +75,7 @@ button:hover {
 
 .spinner {
     margin-bottom: 1.5rem;
-    text-align: left;
+    text-align: center;
     font-size: 12px;
     color: black;
 }
@@ -123,3 +123,11 @@ button:hover {
     font-size: 12px;
 }
 
+.forgetpassword-to-login a {
+    color: rgb(55, 0, 128);
+    text-decoration: none;
+}
+
+.forgetpassword-to-login a:hover {
+    text-decoration: underline;
+}
