--- a/Orbital/frontend/src/Login/resetPassword.css
+++ b/Orbital/frontend/src/Login/resetPassword.css
@@ -76,7 +76,7 @@ button:hover {
 
 .spinner {
     margin-bottom: 1.5rem;
-    text-align: left;
+    text-align: center;
     font-size: 12px;
     color: black;
 }
@@ -129,3 +129,11 @@ button:hover {
     font-size: 12px;
 }
 
+.resetpassword-to-login a {
+    color: rgb(55, 0, 128);
+    text-decoration: none;
+}
+
+.resetpassword-to-login a:hover {
+    text-decoration: underline;
+}
