--- a/Orbital/frontend/src/Login/signIn.css
+++ b/Orbital/frontend/src/Login/signIn.css
@@ -75,7 +75,7 @@ button:hover {
 
 .spinner {
     margin-bottom: 1.5rem;
-    text-align: left;
+    text-align: center;
     font-size: 12px;
     color: black;
 }
@@ -117,3 +117,11 @@ button:hover {
     font-size: 12px;
 }
 
+.login-to-forgetpassword a, .login-to-signup a {
+    color: rgb(55, 0, 128);
+    text-decoration: none;
+}
+
+.login-to-forgetpassword a:hover, .login-to-signup a:hover {
+    text-decoration: underline;
+}
