--- a/Orbital/frontend/src/Login/signUp.css
+++ b/Orbital/frontend/src/Login/signUp.css
@@ -76,7 +76,7 @@ button:hover {
 
 .spinner {
     margin-bottom: 1.5rem;
-    text-align: left;
+    text-align: center;
     font-size: 12px;
     color: black;
 }
@@ -127,4 +127,13 @@ button:hover {
 .signup-to-login {
     text-align: right;
     font-size: 12px;
+}
+
+.signup-to-login a {
+    color: rgb(55, 0, 128);
+    text-decoration: none;
+}
+
+.signup-to-login a:hover {
+    text-decoration: underline;
 }
