--- a/Orbital/frontend/src/Landing/landingPage.css
+++ b/Orbital/frontend/src/Landing/landingPage.css
@@ -2,25 +2,28 @@
     display: flex;
     justify-content: space-between;
     padding: 20px;
-    width: 1200px;
-    margin: 0 auto;
+    /* width: 1200px; */
+    margin: 30px 10px;
+    gap: 20px;
 }
 
 /*left courses and right upcoming ddls*/
 .courses-container {
-    flex: 5;
-    padding: auto;
-    min-width: 0;
+    flex: 6;
 }
 
 .tasks-container {
-    flex: 2;
-    padding: auto;
-    min-width: 0;
+    flex: 3;
 }
 
 .courses-container h2, .tasks-container h2 {
     margin-bottom: 20px;
+}
+
+.courses-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .add-a-task-button {
@@ -91,9 +94,6 @@
 }
 
 .course-item {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
     padding: 10px;
     border: 1px solid #ccc;
     margin-bottom: 10px;
@@ -101,19 +101,17 @@
     background-color: #f9f9f9;
     overflow: auto;
     word-wrap: break-word;
+    width: 200px;
+    height: 200px;
+    position: relative;
 }
 
-.course-item button {
-    background-color: #ff4d4d;
-    color: white;
-    border: none;
-    padding: 5px 10px;
-    border-radius: 5px;
-    cursor: pointer;
-}
-
-.course-item button:hover {
-    background-color: #ff1a1a;
+.course-item-text {
+    top: 50%;
+    left: 50%;
+    position: absolute;
+    transform: translate(-50%, -50%);
+    font-size: 24px;
 }
 
 .task-row {
@@ -140,18 +138,24 @@
     text-align: left;
 }
 
-.task-row button {
-    background-color: #ff4d4d;
-    color: white;
-    border: none;
-    padding: 5px 10px;
-    border-radius: 5px;
-    cursor: pointer;
-    align-items: right;
+.trashcan {
+    padding: 10px 10px;
+    text-align: right;
+    color: grey;
 }
 
-.task-item button:hover {
-    background-color: #ff1a1a;
+.trashcan:hover {
+    color: #ff1a1a;
+    cursor: pointer;
+}
+
+.task-trashcan {
+    flex: 0.5;
+}
+.course-trashcan {
+    position: absolute;
+    top: 5%;
+    right: 5%;
 }
 
 /*link back to dashboard*/
