--- a/Orbital/frontend/src/Landing/landingPage.css
+++ b/Orbital/frontend/src/Landing/landingPage.css
@@ -49,7 +49,7 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    right: auto;
+    right: 50%;
     bottom: auto;
     margin-right: -50%;
     transform: translate(-50%, -50%);
@@ -60,7 +60,7 @@
 }
 
 .add-a-course-popup input, .add-a-task-popup input, .add-a-task-popup select {
-    flex: 1;
+    width: 100%;
     padding: 10px;
     margin-right: 10px;
     border-radius: 5px;
