Latest version of course pop up page 1

--- a/Orbital/frontend/src/Landing/landingPage.css
+++ b/Orbital/frontend/src/Landing/landingPage.css
@@ -31,8 +31,8 @@
     margin: 20px;
 }
 
-/*popups for add a course and add a task*/
-.backdrop-course-popup, .backdrop-task-popup {
+/*popups for add a task*/
+.backdrop-task-popup {
     position: fixed;
     top: 0;
     left: 0;
@@ -44,7 +44,7 @@
     align-items: center;
 }
 
-.add-a-course-popup, .add-a-task-popup {
+.add-a-task-popup {
     flex-direction: column;
     position: absolute;
     top: 50%;
@@ -59,7 +59,7 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /*popup boxes styling*/
 }
 
-.add-a-course-popup input, .add-a-task-popup input, .add-a-task-popup select {
+.add-a-task-popup input, .add-a-task-popup select {
     width: 100%;
     padding: 10px;
     margin-right: 10px;
@@ -68,7 +68,7 @@
     margin-bottom: 20px;
 }
 
-.add-a-course-popup button, .add-a-task-popup button {
+.add-a-task-popup button {
     padding: 10px 20px;
     border: 1px solid #6f90d0;
     border-radius: 5px;
@@ -77,45 +77,87 @@
     cursor: pointer;
 }
 
-.add-a-course-popup button:hover, .add-a-task-popup button:hover {
-    background-color: #5292d7;
+.add-a-task-popup button:hover {
+    background-color: #c6e2ff;
 }
 
 /*course popout*/
-
-.select-reminder-frequency label {
-    font-size: 16px;
-    display: block;
+.add-a-course-popup {
+    flex-direction: column;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    right: auto;
+    bottom: auto;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+    background: rgb(255, 255, 255);
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /*popup boxes styling*/
+}
+  
+.backdrop-course-popup {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.75); /* Semi-transparent backdrop when popup open*/
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+  
+.form-group {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 15px;
+}
+  
+.form-group input[type="text"] {
+    width: 100%;
+    padding: 10px;
+    margin-right: 10px;
+    border-radius: 5px;
+    border: 1px solid #6f90d0;
+    margin-bottom: 20px;
+}
+  
+.select-reminder-frequency h3 {
     margin-bottom: 10px;
 }
 
-.select-reminder-frequency form {
+/*remindergroup contains dropdowncontainer and checkboxcontainer*/
+.reminder-group {
     display: flex;
     justify-content: space-between;
-    padding: 10px;
+    align-items: center;
     margin-bottom: 10px;
-    overflow: auto;
-    word-wrap: break-word;
+}
+  
+.dropdown-container input[type="text"] {
+    width: max-content;
+    padding: 8px;
+    margin-right: 10px;
+    border: 1px solid #6f90d0;
+    border-radius: 5px;
 }
 
-.reminder-checkbox {
-    padding: 10px;
-    background-color: #ffffff;
-    color: rgb(0, 0, 0);
+.reminder-group label {
+    margin-right: 10px;
+}
+
+.dropdown-container {
     display: flex;
-}
-
-.reminder-checkbox input[type="checkbox"] {
-    width: 14px; 
-    height: 14px; 
-    color: #6f90d0;
-}
-
-.select-reminder-frequency select {
-    margin-top: 10px;
+    align-items: center;
     margin-bottom: 10px;
-    font-size: 16px;
-    padding: 10px;
+    align-items: baseline;
+}
+
+.dropdown-container select {
+    padding: 8px;
+    margin-right: 10px;
     border: 1px solid #6f90d0;
     border-radius: 5px;
     background-color: #ffffff;
@@ -123,12 +165,36 @@
     cursor: pointer;
 }
 
-.select-reminder-frequency select:focus {
+.dropdown-container select:focus {
     outline: none;
     border-color: #007BFF;
     box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
 }
 
+.checkbox-container {
+    display: flex;
+    align-items: top;
+    margin-bottom: 10px;
+}
+
+.checkbox-container input[type="checkbox"] {
+    margin-right: 15px;
+    width: 15px;
+    height: 15px;
+}
+
+.add-a-course-popup button {
+    padding: 10px 20px;
+    border: 1px solid #6f90d0;
+    border-radius: 5px;
+    background-color: #ffffff;
+    color: rgb(0, 0, 0);
+    cursor: pointer;
+}
+
+.add-a-course-popup button:hover {
+    background-color: #c6e2ff;
+}
 
 /*courses and tasks shown in the page after adding*/
 
