--- a/Orbital/frontend/src/Course/coursePage.module.css
+++ b/Orbital/frontend/src/Course/coursePage.module.css
@@ -22,6 +22,7 @@
     float: left;
     padding: 20px;
     gap: 20px;
+    padding-top: 50px;
 }
 
 .courseTaskItem {
@@ -29,6 +30,10 @@
     flex-direction: row;
     justify-content: space-between;
     gap: 20px;
+}
+
+.courseTaskItem span {
+    text-align: left;
 }
 
 /*link back to course page*/
