--- a/Orbital/frontend/src/Landing/landingPage.css
+++ b/Orbital/frontend/src/Landing/landingPage.css
@@ -206,11 +206,15 @@
     border-radius: 4px;
     cursor: grab;
     transition: background-color 0.2s ease;
+    top: auto !important;
+    left: auto !important;
 }
 
 .course-draggable:hover {
     background-color: #c6e2ff;
 }
+
+
 
 /*courses and tasks shown in the page after adding*/
 
