--- a/Orbital/frontend/src/Landing/landingPage.css
+++ b/Orbital/frontend/src/Landing/landingPage.css
@@ -158,7 +158,7 @@
 }
 
 .dropdown-container {
-    display: flex;
+    display: block;
     align-items: center;
     margin-bottom: 10px;
     align-items: baseline;
