--- a/Orbital/frontend/src/Course/coursePage.module.css
+++ b/Orbital/frontend/src/Course/coursePage.module.css
@@ -16,13 +16,35 @@
     font-size: xx-large;
 }
 
+.courseTasksContainer {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    padding: 20px;
+    justify-content: left;
+    float: left;
+}
+
+.sortByLabel {
+    font-size: 16px;
+    padding-left: 7%;
+    text-align: left;
+}
+
+.upcomingCompletedContainer {
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    justify-content: left;
+    font-size: 20px;
+}
+
 .courseTasksList {
     display: flex;
     flex-direction: column;
     float: left;
     padding: 20px;
     gap: 20px;
-    padding-top: 50px;
 }
 
 .courseTaskItem {
