--- a/Orbital/frontend/src/Landing/landingPage.module.css
+++ b/Orbital/frontend/src/Landing/landingPage.module.css
@@ -3,6 +3,13 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Calibri:wght@300&display=swap");
 
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box; /*ensures that padding and border are included in total width and height*/
+    font-family: "Calibri", sans-serif;
+} /*applies to all CSS files*/
+
 .mainContainer {
     display: flex;
     justify-content: space-between;
@@ -25,7 +32,7 @@
 }
 
 .upcomingTasksContainer {
-    height: 40%;
+    height: 80vh;
     overflow-y: scroll;
 }
 
