--- a/Orbital/frontend/src/Login/dashboardPage.module.css
+++ b/Orbital/frontend/src/Login/dashboardPage.module.css
@@ -16,25 +16,75 @@
 
 .mainContainer1 {
     display: flex;
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: linear-gradient(hsl(239, 100%, 82%), #c6ecff 50%);
+    /*background: linear-gradient(hsl(239, 100%, 82%), #c6ecff 50%);*/
     background: url("./mountain1.jpg") no-repeat;
     background-size: cover;
     background-position: center;
+    user-select: none;
 } /*acts as the body{}*/
 
-.attributionGroup {
+.linkGroup {
     display: flex;
-    align-items: baseline;
-    bottom: 1%;
-    right: 1%;
     position: fixed;
-    color: rgb(255, 255, 255);
-    font-size: 8px;
+    top: 7%;
+    right: 10%;
+} /*hyperlink to other pages*/
+
+.linkGroup a {
+    border: 2px solid rgba(0, 83, 124, 0.3);
+    border-radius: 30px;
+    padding: 10px 30px;
+    color: #000055;
     text-decoration: none;
-}
+    font-weight: bold;
+    letter-spacing: 1px;
+    font-size: 16px;
+} /*hyperlink text*/
+
+.linkGroup a:hover {
+    background-color: rgba(0, 124, 185, 0.3);
+} /*hyperlink hover*/
+
+.welcomeMessage {
+    position: fixed;
+    top: 61%;
+    left: 35%;
+    color: #000055;
+} /*welcome to smiley*/
+
+.reflectionWelcomeMessage {
+    position: fixed;
+    top: 60%;
+    left: 35%;
+    color: rgba(0, 0, 85, 0.1);
+    transform: scaleY(-1); /* Flip vertically */
+    transform-origin: bottom; /* Set transform origin to bottom */
+} /*welcome to smiley reflection*/
+
+.logoContainer {
+    position: fixed;
+    top: 7%;
+    left: 5%;
+    display: block;
+} /*smiley logo*/
+
+.logoContainer h1 {
+    color: #000055;
+    font-size: 22px;
+    letter-spacing: 1px;
+    margin: 0;
+} /*smiley logo text*/
+
+.logo {
+    width: 50%;
+    height: 50%;
+} /*smiley logo image*/
 
 /*///////////////////////////////////////*/
 /* APPLIES TO DASHBOARD AFTER LOGIN PAGE */
@@ -42,12 +92,15 @@
 
 .mainContainer2 {
     display: flex;
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: linear-gradient(hsl(239, 100%, 82%), #c6ecff 50%);
-    /*background: url("https://images.pexels.com/photos/220453/pexels-photo-220453.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1")
-        no-repeat;*/
+    /*background: linear-gradient(hsl(239, 100%, 82%), #c6ecff 50%);*/
+    background: url("https://images.pexels.com/photos/220453/pexels-photo-220453.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1")
+        no-repeat;
     background-size: cover;
     background-position: center;
 } /*acts as the body{}*/
@@ -57,13 +110,45 @@
     height: 45px;
     border: none;
     outline: none;
-    border-radius: 40px;
+    border-radius: 30px;
     color: #fff;
     cursor: pointer;
     font-size: 16px;
     font-weight: bold;
     background: linear-gradient(to right, #3227b0, #408bfb);
-    box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.04);
     margin-top: 20px;
     margin-bottom: 20px;
 } /*button*/
+
+/*Dashboard attribution*/
+.attributionGroup {
+    display: flex;
+    bottom: 1%;
+    right: 1%;
+    position: fixed;
+    color: rgb(255, 255, 255);
+    font-size: 8px;
+    text-decoration: none;
+}
+
+/*on click ripple effect*/
+.rippleContainer {
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+}
+
+.ripple {
+    position: fixed;
+    background-color: rgba(255, 255, 255, 0.5);
+    border-radius: 50%;
+    transform: scale(0);
+    animation: rippleEffect 0.5s linear;
+}
+
+@keyframes rippleEffect {
+    to {
+        transform: scale(2);
+        opacity: 0;
+    }
+}
