--- a/Orbital/frontend/src/Login/dashboardPage.module.css
+++ b/Orbital/frontend/src/Login/dashboardPage.module.css
@@ -70,7 +70,7 @@
 .logoContainer {
     position: fixed;
     top: 7%;
-    left: 5%;
+    left: 7%;
     display: block;
 } /*smiley logo*/
 
@@ -85,6 +85,28 @@
     width: 50%;
     height: 50%;
 } /*smiley logo image*/
+
+.logoShake {
+    width: 50%;
+    height: 50%;
+    animation: spin 3s ease;
+}
+
+/* Shake animation */
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+    25% {
+        transform: rotate(-30deg);
+    }
+    50% {
+        transform: rotate(30deg);
+    }
+    100% {
+        transform: rotate(-360deg);
+    }
+}
 
 /*///////////////////////////////////////*/
 /* APPLIES TO DASHBOARD AFTER LOGIN PAGE */
@@ -143,7 +165,7 @@
     background-color: rgba(255, 255, 255, 0.5);
     border-radius: 50%;
     transform: scale(0);
-    animation: rippleEffect 0.5s linear;
+    animation: rippleEffect 1s ease-out;
 }
 
 @keyframes rippleEffect {
