--- a/Orbital/frontend/src/Login/dashboardPage.module.css
+++ b/Orbital/frontend/src/Login/dashboardPage.module.css
@@ -80,7 +80,7 @@
     align-items: center;
     min-height: 100vh;
     /*background: linear-gradient(hsl(239, 100%, 82%), #c6ecff 50%);*/
-    background: url("./avocados.png") no-repeat;
+    background: url("./mountain1.jpg") no-repeat;
     background-size: cover;
     background-position: center;
     user-select: none;
