--- a/Orbital/frontend/src/Login/loginPage.module.css
+++ b/Orbital/frontend/src/Login/loginPage.module.css
@@ -52,7 +52,7 @@
 .formGroup {
     width: 100%;
     height: 50px;
-    margin: 30px 0;
+    margin: 35px 0;
     align-items: center;
 } /*input box and label*/
 
@@ -69,7 +69,7 @@
 } /*input box content*/
 
 .formGroup input::placeholder {
-    color: #000055;
+    color: rgb(0, 0, 85, 0.5);
 } /*input box placeholder*/
 
 .formGroup i {
@@ -97,9 +97,17 @@
 
 .linkGroup a:hover {
     text-decoration: underline;
-} /*hyperlink hover*/
+} /*hyperlink on hover*/
 
 .buttonGroup {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
+} /*contains button and spinner group*/
+
+.buttonGroup button {
     width: 100%;
     height: 45px;
     border: none;
@@ -110,32 +118,16 @@
     font-size: 16px;
     font-weight: bold;
     background: linear-gradient(to right, #3227b0, #408bfb);
-    margin-top: 20px;
-    margin-bottom: 20px;
 } /*button*/
 
-.errorMessage {
-    margin-top: 10px;
-    margin-bottom: 10px;
-    text-align: center;
-    font-size: 12px;
-} /*error message*/
-
-.successMessage {
-    margin-top: 10px;
-    margin-bottom: 10px;
-    text-align: center;
-    font-size: 12px;
-} /*success message*/
-
-.spinner {
-    margin-bottom: 1.5rem;
+.spinnerGroup {
+    margin-top: 20px;
     text-align: center;
     font-size: 12px;
     color: black;
 } /*spinner container*/
 
-.loadingSpinner {
+.spinner {
     width: 32px;
     height: 32px;
     background-color: blue;
@@ -152,7 +144,7 @@
     border: 1px solid white;
 } /*spinner animation*/
 
-.loadingSpinner::before {
+.spinner::before {
     content: "";
     background-color: white;
     position: absolute;
@@ -171,11 +163,6 @@
         transform: rotate(360deg);
     }
 } /*spinner animation*/
-
-.passwordRequirements {
-    font-size: 10px;
-    color: rgb(57, 57, 57);
-} /*password requirements font*/
 
 /*login attribution*/
 .attributionGroup {
@@ -251,3 +238,32 @@
         transform: rotate(-360deg);
     }
 }
+
+.passwordRequirements {
+    font-size: 10px;
+    color: rgb(57, 57, 57);
+} /*password requirements font*/
+
+.errorMessage {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    text-align: center;
+    font-size: 12px;
+} /*error message*/
+
+.successMessage {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    text-align: center;
+    font-size: 12px;
+} /*success message*/
+
+.successMessage a {
+    color: green;
+    text-decoration: none;
+    font-weight: bold;
+} /*success message hyperlink*/
+
+.successMessage a:hover {
+    text-decoration: underline;
+} /*success message hyperlink on hover*/
